--- a/styles.css
+++ b/styles.css
@@ -1,48 +1,27 @@
 :root {
-    --bg-color: rgb(20, 20, 20);
-    --card-color: rgb(23, 23, 23);
+  --bg-color: rgb(20, 20, 20);
+  --card-color: rgb(23, 23, 23);
 }
 
-body, html {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100vh;
-    overflow: hidden;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgb(0, 0, 0);
-    background-image: radial-gradient(at 29% 18%, rgb(36, 36, 36) 0, transparent 100%), radial-gradient(at 100% 100%, rgb(36, 36, 36) 0, transparent 48%);
-    cursor: none;
-}
-
-/* 
-
-    Cursor Animation
-
-*/
-.cursor-dot {
-    width: 5px;
-    height: 5px;
-    background-color: white;
-}
-
-.cursor-outline {
-    width: 30px;
-    height: 30px;
-    border: 2px solid hsla(0, 0%, 100%, 0.5);
-}
-
-.cursor-dot,
-.cursor-outline {
-    position: fixed;
-    top: 0;
-    left: 0;
-    transform: translate(-50%, -50%);
-    border-radius: 50%;
-    z-index: 3;
-    pointer-events: none;
+body,
+html {
+  margin: 0;
+  overflow: hidden;
+  padding: 0;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(0, 0, 0);
+  background-image: radial-gradient(
+      at 29% 18%,
+      rgb(36, 36, 36) 0,
+      transparent 100%
+    ),
+    radial-gradient(at 100% 100%, rgb(36, 36, 36) 0, transparent 48%);
+  cursor: none;
 }
 
 /* 
@@ -52,13 +31,41 @@ body, html {
 */
 
 .container {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
-    gap: 10px;
-    width: 80%;
-    max-width: 1100px;
-    aspect-ratio: 4/3;
+  display: grid;
+  grid-template-columns: repeat(auto-fill);
+  gap: 10px;
+  width: 80%;
+  max-width: 1100px;
+  aspect-ratio: 4/3;
+  overflow-y: auto;
+}
+
+/* 
+
+    Cursor Animation
+
+*/
+.cursor-dot {
+  width: 5px;
+  height: 5px;
+  background-color: white;
+}
+
+.cursor-outline {
+  width: 30px;
+  height: 30px;
+  border: 2px solid hsla(0, 0%, 100%, 0.5);
+}
+
+.cursor-dot,
+.cursor-outline {
+  position: fixed;
+  top: 0;
+  left: 0;
+  transform: translate(-50%, -50%);
+  border-radius: 50%;
+  z-index: 3;
+  pointer-events: none;
 }
 
 /* 
@@ -68,66 +75,91 @@ body, html {
 */
 
 .card {
-    background-color: rgba(255, 255, 255, 0.082);
-    border-radius: 8px;
-    position: relative;
-    transition: transform 0.3s ease;
+  background-color: rgba(255, 255, 255, 0.082);
+  border-radius: 8px;
+  position: relative;
+  transition: transform 0.3s ease;
+  margin: 4px;
 }
 
 .card:hover {
-    transform: translateY(-4px);
+  transform: translateY(-4px);
 }
 
 .card::before,
 .card > .card-border {
-    background: radial-gradient(
-        800px circle at var(--mouse-x) var(--mouse-y),
-        rgba(255, 255, 255, 0.06),
-        transparent 40%
-    );
-    border-radius: inherit;
-    content: "";
-    height: 100%;
-    width: 100%;
-    left: 0px;
-    top: 0px;
-    position: absolute;
-    z-index: 2;
-    opacity: 0;
-    transition: opacity 500ms;
+  background: radial-gradient(
+    800px circle at var(--mouse-x) var(--mouse-y),
+    rgba(255, 255, 255, 0.06),
+    transparent 40%
+  );
+  border-radius: inherit;
+  content: "";
+  height: 100%;
+  width: 100%;
+  left: 0px;
+  top: 0px;
+  position: absolute;
+  z-index: 2;
+  opacity: 0;
+  transition: opacity 500ms;
 }
 
 .card::before {
-    background: radial-gradient(
-        800px circle at var(--mouse-x) var(--mouse-y),
-        rgba(255, 255, 255, 0.075),
-        transparent 40%
-    );
-    z-index: 3;
+  background: radial-gradient(
+    800px circle at var(--mouse-x) var(--mouse-y),
+    rgba(255, 255, 255, 0.075),
+    transparent 40%
+  );
+  z-index: 3;
 }
 
 .card > .card-border {
-    background: radial-gradient(
-        400px circle at var(--mouse-x) var(--mouse-y),
-        rgba(255, 255, 255, 0.3),
-        transparent 40%
-    );
-    z-index: 1;
+  background: radial-gradient(
+    400px circle at var(--mouse-x) var(--mouse-y),
+    rgba(255, 255, 255, 0.3),
+    transparent 40%
+  );
+  z-index: 1;
 }
 
 .card:hover::before,
-.card:hover > .card-border{
-    opacity: 1;
+.card:hover > .card-border {
+  opacity: 1;
 }
 
 .card > .card-content {
-    background-color: var(--card-color);
-    height: calc(100% - 2px);
-    width: calc(100% - 2px);
-    border-radius: inherit;
-    margin: 1px;
-    z-index: 2;
-    position: relative;
+  background-color: var(--card-color);
+  height: calc(100% - 2px);
+  width: calc(100% - 2px);
+  border-radius: inherit;
+  margin: 1px;
+  z-index: 2;
+  position: relative;
+}
+
+/* 
+
+    Card Expansion
+
+*/
+
+.container.card-expanded {
+  display: flex !important;
+  justify-content: center;
+  align-items: center;
+}
+
+.card.expanded {
+  position: absolute;
+  width: calc(100% - 20px); /* Adjust for gap */
+  height: calc(100% - 20px); /* Adjust for gap */
+  z-index: 10;
+  margin: 0;
+}
+
+.card.hidden {
+  display: none;
 }
 
 /* 
@@ -137,48 +169,48 @@ body, html {
 */
 
 .card:nth-child(1) {
-    grid-column: 1 / 5;
-    grid-row: 1 / 3;
+  grid-column: 1 / 5;
+  grid-row: 1 / 3;
 }
 
 .card:nth-child(2) {
-    grid-column: 8 / 5;
-    grid-row: 1 / 2;
+  grid-column: 8 / 5;
+  grid-row: 1 / 2;
 }
 
 .card:nth-child(3) {
-    grid-column: 5 / 6;
-    grid-row: 2 / 2;
+  grid-column: 5 / 6;
+  grid-row: 2 / 2;
 }
 
 .card:nth-child(4) {
-    grid-column: 6 / 8;
-    grid-row: 2 / 3;
+  grid-column: 6 / 8;
+  grid-row: 2 / 3;
 }
 
 .card:nth-child(5) {
-    grid-column: 1 / 3;
-    grid-row: 3 / 7;
+  grid-column: 1 / 3;
+  grid-row: 3 / 7;
 }
 
 .card:nth-child(6) {
-    grid-column: 3 / 5;
-    grid-row: 3 / 5;
+  grid-column: 3 / 5;
+  grid-row: 3 / 5;
 }
 
 .card:nth-child(7) {
-    grid-column: 5 / 8;
-    grid-row: 3 / 6;
+  grid-column: 5 / 8;
+  grid-row: 3 / 6;
 }
 
 .card:nth-child(8) {
-    grid-column: 3 / 5;
-    grid-row: 5 / 7;
+  grid-column: 3 / 5;
+  grid-row: 5 / 7;
 }
 
 .card:nth-child(9) {
-    grid-column: 5 / 8;
-    grid-row: 6 / 7;
+  grid-column: 5 / 8;
+  grid-row: 6 / 7;
 }
 
 /* 
@@ -187,58 +219,244 @@ body, html {
 
 */
 
+@media (max-width: 1373px) {
+  .card:nth-child(1) {
+    grid-column: 1 / 5;
+    grid-row: 1 / 3;
+  }
+
+  .card:nth-child(2) {
+    grid-column: 8 / 5;
+    grid-row: 1 / 2;
+  }
+
+  .card:nth-child(3) {
+    grid-column: 5 / 8;
+    grid-row: 2 / 2;
+  }
+
+  .card:nth-child(4) {
+    grid-column: 5 / 8;
+    grid-row: 3 / 4;
+  }
+
+  .card:nth-child(5) {
+    grid-column: 1 / 3;
+    grid-row: 3 / 7;
+  }
+
+  .card:nth-child(6) {
+    grid-column: 3 / 5;
+    grid-row: 3 / 5;
+  }
+
+  .card:nth-child(7) {
+    grid-column: 5 / 8;
+    grid-row: 4 / 6;
+  }
+
+  .card:nth-child(8) {
+    grid-column: 3 / 5;
+    grid-row: 5 / 7;
+  }
+
+  .card:nth-child(9) {
+    grid-column: 5 / 8;
+    grid-row: 6 / 7;
+  }
+}
+
+@media (max-width: 1000px) {
+  body,
+  html {
+    height: auto;
+    overflow: auto;
+  }
+
+  .container {
+    grid-template-columns: repeat(7, 1fr);
+    grid-template-rows: repeat(6, minmax(200px, auto));
+    width: 100%;
+    max-width: none;
+    aspect-ratio: auto;
+    margin: 30px;
+  }
+  .card:nth-child(1) {
+    grid-column: 1 / 5;
+    grid-row: 1 / 3;
+  }
+
+  .card:nth-child(2) {
+    grid-column: 8 / 5;
+    grid-row: 1 / 2;
+  }
+
+  .card:nth-child(3) {
+    grid-column: 5 / 8;
+    grid-row: 2 / 2;
+  }
+
+  .card:nth-child(4) {
+    grid-column: 5 / 8;
+    grid-row: 3 / 4;
+  }
+
+  .card:nth-child(5) {
+    grid-column: 1 / 5;
+    grid-row: 3 / 5;
+  }
+
+  .card:nth-child(6) {
+    grid-column: 1 / 3;
+    grid-row: 5 / 7;
+  }
+
+  .card:nth-child(7) {
+    grid-column: 5 / 8;
+    grid-row: 4 / 6;
+  }
+
+  .card:nth-child(8) {
+    grid-column: 3 / 5;
+    grid-row: 5 / 7;
+  }
+
+  .card:nth-child(9) {
+    grid-column: 5 / 8;
+    grid-row: 6 / 7;
+  }
+}
+
 @media (max-width: 768px) {
-    .container {
-        grid-template-columns: 1fr;
-        grid-template-rows: repeat(8, 1fr);
-        aspect-ratio: auto;
-        height: 80%;
-    }
+  body,
+  html {
+    height: auto;
+    overflow: auto;
+  }
 
-    .card {
-        grid-column: 1 / 2 !important;
-        grid-row: auto !important;
-        aspect-ratio: 16/9;
-    }
+  .container {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(12, minmax(200px, auto));
+    width: 100%;
+    max-width: none;
+    aspect-ratio: auto;
+    margin: 30px;
+  }
 
-    /* Specific adjustments for smaller screens */
-    .card:nth-child(1) {
-        grid-column: 1 / 2;
-        grid-row: 1 / 2;
-    }
+  .card {
+    grid-column: span 1;
+    grid-row: auto;
+  }
 
-    .card:nth-child(2) {
-        grid-column: 1 / 2;
-        grid-row: 2 / 3;
-    }
+  .card:nth-child(1) {
+    grid-column: 1 / 4;
+    grid-row: 2 / 4;
+  }
 
-    .card:nth-child(3) {
-        grid-column: 1 / 2;
-        grid-row: 3 / 4;
-    }
+  .card:nth-child(2) {
+    grid-column: 1 / 4;
+    grid-row: 4 / 5;
+  }
 
-    .card:nth-child(4) {
-        grid-column: 1 / 2;
-        grid-row: 4 / 5;
-    }
+  .card:nth-child(3) {
+    grid-column: 1 / 2;
+    grid-row: 5 / 6;
+  }
 
-    .card:nth-child(5) {
-        grid-column: 1 / 2;
-        grid-row: 5 / 6;
-    }
+  .card:nth-child(4) {
+    grid-column: 2 / 4;
+    grid-row: 5 / 6;
+  }
 
-    .card:nth-child(6) {
-        grid-column: 1 / 2;
-        grid-row: 6 / 7;
-    }
+  .card:nth-child(5) {
+    grid-column: 1 / 4;
+    grid-row: 6 / 8;
+  }
 
-    .card:nth-child(7) {
-        grid-column: 1 / 2;
-        grid-row: 7 / 8;
-    }
+  .card:nth-child(6) {
+    grid-column: 1 / 2;
+    grid-row: 8 / 9;
+  }
 
-    .card:nth-child(8) {
-        grid-column: 1 / 2;
-        grid-row: 8 / 9;
-    }
+  .card:nth-child(7) {
+    grid-column: 1 / 4;
+    grid-row: 9 / 11;
+  }
+
+  .card:nth-child(8) {
+    grid-column: 2 / 4;
+    grid-row: 8 / 9;
+  }
+
+  .card:nth-child(9) {
+    grid-column: 1 / 4;
+    grid-row: 11 / 12;
+  }
+}
+
+@media (max-width: 650px) {
+  body,
+  html {
+    height: auto;
+    overflow: auto;
+  }
+
+  .container {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(14, minmax(200px, auto));
+    width: 100%;
+    max-width: none;
+    aspect-ratio: auto;
+    margin: 30px;
+  }
+
+  .card {
+    grid-column: span 1;
+    grid-row: auto;
+  }
+
+  .card:nth-child(1) {
+    grid-column: 1 / 4;
+    grid-row: 2 / 4;
+  }
+
+  .card:nth-child(2) {
+    grid-column: 1 / 4;
+    grid-row: 4 / 5;
+  }
+
+  .card:nth-child(3) {
+    grid-column: 1 / 4;
+    grid-row: 5 / 6;
+  }
+
+  .card:nth-child(4) {
+    grid-column: 1 / 4;
+    grid-row: 6 / 7;
+  }
+
+  .card:nth-child(5) {
+    grid-column: 1 / 4;
+    grid-row: 7 / 9;
+  }
+
+  .card:nth-child(6) {
+    grid-column: 1 / 4;
+    grid-row: 9 / 10;
+  }
+
+  .card:nth-child(7) {
+    grid-column: 1 / 4;
+    grid-row: 11 / 13;
+  }
+
+  .card:nth-child(8) {
+    grid-column: 1 / 4;
+    grid-row: 10 / 11;
+  }
+
+  .card:nth-child(9) {
+    grid-column: 1 / 4;
+    grid-row: 13 / 14;
+  }
 }
