--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@
 body,
 html {
   margin: 0;
+  font-family: "Noto Serif", serif;
   overflow: hidden;
   padding: 0;
   width: 100%;
@@ -22,6 +23,16 @@ html {
     ),
     radial-gradient(at 100% 100%, rgb(36, 36, 36) 0, transparent 48%);
   cursor: none;
+}
+
+h1 {
+  font-family: "Noto Serif", serif;
+  font-weight: 900; /* You can adjust the weight as needed */
+}
+
+p {
+  font-family: "Noto Serif", serif;
+  font-weight: 400; /* Regular weight */
 }
 
 /* 
@@ -75,11 +86,11 @@ html {
 */
 
 .card {
-  background-color: rgba(255, 255, 255, 0.082);
+  background-color: rgba(255, 255, 255, 0.281);
   border-radius: 8px;
   position: relative;
-  transition: transform 0.3s ease;
   margin: 4px;
+  transition: transform 0.3s ease;
 }
 
 .card:hover {
@@ -144,22 +155,19 @@ html {
 
 */
 
-.container.card-expanded {
-  display: flex !important;
-  justify-content: center;
-  align-items: center;
-}
-
 .card.expanded {
-  position: absolute;
-  width: calc(100% - 20px); /* Adjust for gap */
-  height: calc(100% - 20px); /* Adjust for gap */
+  grid-column: 1 / -1;
+  grid-row: 1 / -1;
+  transition: all 0.3s ease; /* Smooth transition */
   z-index: 10;
-  margin: 0;
 }
 
 .card.hidden {
   display: none;
+}
+
+.container.card-expanded {
+  display: grid;
 }
 
 /* 
@@ -213,6 +221,32 @@ html {
   grid-row: 6 / 7;
 }
 
+/* 
+
+  Card 1 Stuff
+
+*/
+
+.card-inner-grid {
+  display: grid;
+  grid-template-rows: repeat(2, 50%);
+  grid-template-columns: repeat(3, 33%);
+  place-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+.profile-picture {
+  background-image: url("/assets/ProfileP.png");
+  background-size: cover;
+  width: 8vw;
+  height: 8vw;
+  border-radius: 50%;
+}
+
+.hero-text {
+  color: white;
+}
 /* 
 
     Media Queries
