removed text styling

--- a/styles.css
+++ b/styles.css
@@ -24,16 +24,16 @@ html {
     radial-gradient(at 100% 100%, rgb(36, 36, 36) 0, transparent 48%);
   cursor: none;
 }
-/* 
+
 h1 {
   font-family: "Noto Serif", serif;
   font-weight: 900;
 }
-              Comment this part back in later on
+
 p {
   font-family: "Noto Serif", serif;
   font-weight: 400;
-} */
+}
 
 /* 
 
